{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 359,
  "lineage": "82e2b808-fbd6-0649-7c1f-9763b27dacd0",
  "resources": [
    {
      "module": "module.customeip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "custom_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c61a8a2faec0df5a",
            "domain": "vpc",
            "id": "eipalloc-0c61a8a2faec0df5a",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-16-170-67-61.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.67.61",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "myLB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:059039215690:loadbalancer/app/myalb/caac991cd0757f10",
            "arn_suffix": "app/myalb/caac991cd0757f10",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "myalb-1452933065.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:059039215690:loadbalancer/app/myalb/caac991cd0757f10",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "myalb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04ff40ef70f12488b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01ab985cb69d4b55e"
              },
              {
                "subnet_id": "subnet-06d8e7cba945e01af"
              }
            ],
            "subnets": [
              "subnet-01ab985cb69d4b55e",
              "subnet-06d8e7cba945e01af"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-04215ced153dfd0ef",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "module.my_public_subnet.aws_subnet.private_subnet",
            "module.my_public_subnet.aws_subnet.public_subnet",
            "module.my_sg.aws_security_group.my_sg",
            "module.vpc_module.aws_vpc.custom_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:059039215690:listener/app/myalb/caac991cd0757f10/4bd2999c0f12d137",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:059039215690:targetgroup/my-tg/852df76b6bc2f787",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:059039215690:listener/app/myalb/caac991cd0757f10/4bd2999c0f12d137",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:059039215690:loadbalancer/app/myalb/caac991cd0757f10",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.myLB",
            "module.my_public_subnet.aws_subnet.private_subnet",
            "module.my_public_subnet.aws_subnet.public_subnet",
            "module.my_sg.aws_security_group.my_sg",
            "module.target_gp.aws_lb_target_group.mytg",
            "module.vpc_module.aws_vpc.custom_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.my_custom_igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "custom_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:059039215690:internet-gateway/igw-07265320bac0bc432",
            "id": "igw-07265320bac0bc432",
            "owner_id": "059039215690",
            "tags": {
              "Name": "custom-igw"
            },
            "tags_all": {
              "Name": "custom-igw"
            },
            "vpc_id": "vpc-04215ced153dfd0ef"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.custom_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.my_nat_gtw",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "custom_NAT_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c61a8a2faec0df5a",
            "association_id": "eipassoc-07a0c3fd3c29fbd2c",
            "connectivity_type": "public",
            "id": "nat-0acffa33442e1be5d",
            "network_interface_id": "eni-06e8b525a61198705",
            "private_ip": "10.0.10.217",
            "public_ip": "16.170.67.61",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06d8e7cba945e01af",
            "tags": {
              "Name": "nat_gateway"
            },
            "tags_all": {
              "Name": "nat_gateway"
            }
          },
          "dependencies": [
            "module.customeip.aws_eip.custom_eip",
            "module.my_public_subnet.aws_subnet.public_subnet",
            "module.vpc_module.aws_vpc.custom_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.my_public_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:059039215690:subnet/subnet-01ab985cb69d4b55e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ab985cb69d4b55e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "059039215690",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-04215ced153dfd0ef"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.custom_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.my_public_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:059039215690:subnet/subnet-06d8e7cba945e01af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d8e7cba945e01af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "059039215690",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-04215ced153dfd0ef"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.custom_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.my_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:059039215690:security-group/sg-04ff40ef70f12488b",
            "description": "Allow inbound HTTP and HTTPS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ff40ef70f12488b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "inbound rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "inbound rule",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "inbound rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-sg-name",
            "name_prefix": "",
            "owner_id": "059039215690",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-sg"
            },
            "tags_all": {
              "Name": "my-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04215ced153dfd0ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.custom_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.myec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011e54f70c1c91e17",
            "arn": "arn:aws:ec2:eu-north-1:059039215690:instance/i-0659b119a40b27fd9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0659b119a40b27fd9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cfae4ec21eed2ed5",
            "private_dns": "ip-10-0-10-104.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.104",
            "public_ip": "13.48.190.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b03966c62f8d250a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06d8e7cba945e01af",
            "tags": {
              "Name": "nginx_ec2",
              "env": "QA"
            },
            "tags_all": {
              "Name": "nginx_ec2",
              "env": "QA"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04ff40ef70f12488b"
            ]
          },
          "dependencies": [
            "module.my_public_subnet.aws_subnet.public_subnet",
            "module.my_sg.aws_security_group.my_sg",
            "module.myec2.aws_key_pair.my_key_pair",
            "module.myec2.data.aws_ami.ubuntu",
            "module.vpc_module.aws_vpc.custom_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.private_rt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:059039215690:route-table/rtb-0f972e6a6e119c835",
            "id": "rtb-0f972e6a6e119c835",
            "owner_id": "059039215690",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0acffa33442e1be5d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_RT"
            },
            "tags_all": {
              "Name": "private_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04215ced153dfd0ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.customeip.aws_eip.custom_eip",
            "module.my_nat_gtw.aws_nat_gateway.custom_NAT_GW",
            "module.my_public_subnet.aws_subnet.public_subnet",
            "module.vpc_module.aws_vpc.custom_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.private_rt",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_RT_Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e83bad0298ffadca",
            "route_table_id": "rtb-0f972e6a6e119c835",
            "subnet_id": "subnet-01ab985cb69d4b55e"
          },
          "dependencies": [
            "module.customeip.aws_eip.custom_eip",
            "module.my_nat_gtw.aws_nat_gateway.custom_NAT_GW",
            "module.my_public_subnet.aws_subnet.private_subnet",
            "module.my_public_subnet.aws_subnet.public_subnet",
            "module.private_rt.aws_route_table.private_route_table",
            "module.vpc_module.aws_vpc.custom_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.public_rt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "custom_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:059039215690:route-table/rtb-0af6215eaca69f184",
            "id": "rtb-0af6215eaca69f184",
            "owner_id": "059039215690",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07265320bac0bc432",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub_route_table"
            },
            "tags_all": {
              "Name": "pub_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04215ced153dfd0ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_custom_igw.aws_internet_gateway.custom_IGW",
            "module.vpc_module.aws_vpc.custom_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.public_rt",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "custom_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07576453ce9ec6984",
            "route_table_id": "rtb-0af6215eaca69f184",
            "subnet_id": "subnet-06d8e7cba945e01af"
          },
          "dependencies": [
            "module.my_custom_igw.aws_internet_gateway.custom_IGW",
            "module.my_public_subnet.aws_subnet.public_subnet",
            "module.public_rt.aws_route_table.custom_route_table",
            "module.vpc_module.aws_vpc.custom_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.target_gp",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mytg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:059039215690:targetgroup/my-tg/852df76b6bc2f787",
            "arn_suffix": "targetgroup/my-tg/852df76b6bc2f787",
            "deregistration_delay": "100",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200-499",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 7,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:059039215690:targetgroup/my-tg/852df76b6bc2f787",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04215ced153dfd0ef"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.custom_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.target_gp",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ec2_targets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:059039215690:targetgroup/my-tg/852df76b6bc2f787-20240426144249520100000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:059039215690:targetgroup/my-tg/852df76b6bc2f787",
            "target_id": "i-0659b119a40b27fd9"
          },
          "dependencies": [
            "module.my_public_subnet.aws_subnet.public_subnet",
            "module.my_sg.aws_security_group.my_sg",
            "module.myec2.aws_instance.myec2",
            "module.myec2.aws_key_pair.my_key_pair",
            "module.myec2.data.aws_ami.ubuntu",
            "module.target_gp.aws_lb_target_group.mytg",
            "module.vpc_module.aws_vpc.custom_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:059039215690:vpc/vpc-04215ced153dfd0ef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ad3327556641f0f0",
            "default_route_table_id": "rtb-082d0c49368d68263",
            "default_security_group_id": "sg-019e7c4563d608819",
            "dhcp_options_id": "dopt-0ccaffef4f591778f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04215ced153dfd0ef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-082d0c49368d68263",
            "owner_id": "059039215690",
            "tags": {
              "Name": "custom-vpc"
            },
            "tags_all": {
              "Name": "custom-vpc"
            }
          }
        }
      ]
    }
  ]
}